[gd_scene load_steps=6 format=3 uid="uid://bjs776mbyhs8u"]

[ext_resource type="Script" path="res://scripts/projectile_forward.gd" id="1_32nn6"]
[ext_resource type="PackedScene" uid="uid://bn8i1qlwgcicj" path="res://scenes/actors/rocket_explosion.tscn" id="2_yu35e"]
[ext_resource type="Script" path="res://scripts/damage_dealer.gd" id="3_y25q4"]

[sub_resource type="PrismMesh" id="PrismMesh_eavxb"]
size = Vector3(0.3, 0.3, 0.75)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uctjh"]
radius = 0.3
height = 1.0

[node name="Super Rocket" type="Area3D" node_paths=PackedStringArray("damage_dealer")]
script = ExtResource("1_32nn6")
SPEED = 18.0
EXPLOSION = ExtResource("2_yu35e")
damage_dealer = NodePath("Damage Dealer")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0, 0)
mesh = SubResource("PrismMesh_eavxb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.0263893)
shape = SubResource("CapsuleShape3D_uctjh")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Damage Dealer" type="Node" parent="."]
script = ExtResource("3_y25q4")
damage = 12

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
