[gd_scene load_steps=4 format=3 uid="uid://cmpasqmvx8do"]

[ext_resource type="Script" path="res://scripts/projectile_forward.gd" id="1_7ofts"]
[ext_resource type="Script" path="res://scripts/damage_dealer.gd" id="2_lybfd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pt1fq"]
size = Vector3(3.01893, 1.91609, 1.57031)

[node name="SoldierMelee" type="Area3D" node_paths=PackedStringArray("damage_dealer") groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2.69414)
script = ExtResource("1_7ofts")
damage_dealer = NodePath("DamageDealer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_pt1fq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="DamageDealer" type="Node" parent="."]
script = ExtResource("2_lybfd")
damage = 8

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(2.98023e-08, -1, 0, 1, 2.98023e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.804015
height = 2.98391

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="queue_free"]
